# perseus

./: .gitignore  ChangeLog.md  LICENSE  perseus.cabal  stack.yaml
src/: Main.hs
src/Perseus/: Api.hs  Client.hs  Server.hs  Storage.hs  Types.hs
